feat: Setup node referencing